tests/paczka1/small_fuzzy/90894150.err
Error in line 5: LKm A94 4N,N
Error in line 13: lxTNt35d S623 330,09
